--- a/style.css
+++ b/style.css
@@ -36,10 +36,8 @@ nav a:hover {
 
 /* HERO */
 .hero {
-    height: 80vh;
-    display: flex;
+     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -215,4 +213,12 @@ section {
 .hero-btn:hover,
 .resume-btn:hover {
     transform: scale(1.05);
+}
+.profile-pic {
+    width: 180px;
+    height: 180px;
+    border-radius: 100%;
+    object-fit: cover;
+    border: 3px solid #FFD700;
+    margin-bottom: 20px;
 }
